# identity-playspace

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: users.py
backend/migrations/: env.py
backend/migrations/versions/: 3361888597f4_move_ts_defaults_to_server_in_users_.py  a7bfc9b2945_empty_init.py  abd4943e2e7c_add_user_table.py  dfbf1a787e6b_add_union_tables.py
docs/: backend.md  frontend.md
frontend/: package-lock.json  package.json
frontend/mock/: README.md
frontend/mock/config/: header_glob.json
frontend/mock/config/unions/: get-unions.yml
frontend/public/: index.html
frontend/src/: App.css  static.json
frontend/src/components/: App.js
frontend/src/components/Proposals/: ProposalsList.js  ProposalsPage.js
frontend/src/components/Unions/: UnionsPage.js  UnionsPicker.js
frontend/src/components/Users/: UsersPage.js
legacy/: config.py  models copy.py
scripts/: aws_ec2.sh
