[tool.poetry]
name = "identity-playspace-be"
version = "0.1.0"
description = ""
authors = ["raokrutarth <raok95+git@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
alembic = "^1.7.6"
PyYAML = "^6.0"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.32"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
